table and alignment issue

--- a/configuratior/src/app/components/feature/bom/bom.component.scss
+++ b/configuratior/src/app/components/feature/bom/bom.component.scss
@@ -19,3 +19,14 @@
         }
     }
 }
+
+#featureNameCode,
+
+#type_value_code{
+    border-top-right-radius: 0 !important;
+    border-bottom-right-radius: 0 !important;
+}
+
+.basic-addon2-table {
+    margin-top: 0;
+}
