--- a/configuratior/src/assets/css/_common.scss
+++ b/configuratior/src/assets/css/_common.scss
@@ -172,19 +172,19 @@ body{
     }
   
     // prevent to increase size of scrollbar
-    .ps__rail-y{
-      width: 6px !important;
-      .ps__thumb-y{
-        width: 6px !important;
-      }
-    }
+    // .ps__rail-y{
+    //   width: 6px !important;
+    //   .ps__thumb-y{
+    //     width: 6px !important;
+    //   }
+    // }
 
-    .ps__rail-x{
-        height: 6px !important;
-        .ps__thumb-x{
-            height: 6px !important;
-        }
-    }
+    // .ps__rail-x{
+    //     height: 6px !important;
+    //     .ps__thumb-x{
+    //         height: 6px !important;
+    //     }
+    // }
 
     //our custom tab
         .opti_tab-outer{
