--- a/configuratior/src/styles.scss
+++ b/configuratior/src/styles.scss
@@ -37,7 +37,7 @@ table th .fa-trash{
     margin-left: 5px;
 }
 body .ps__rail-y{
-    opacity: 1;
+    // opacity: 1;
 }
 .sidebar .nav-item .nav-link:hover {
     color: $primaryColor;
